Добавил получение по Id в swagger и поправил мелкие ошибки
